added a new section for publications and updated the info in resume tab

--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
             <section class="py-5">
                 <div class="container px-5 mb-5">
                     <div class="text-center mb-5">
-                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Projects</span></h1>
+                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Publications</span></h1>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
@@ -48,11 +48,11 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Aviva</h2>
-                                               <h3> Process Automation</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder"> <a href="https://medium.com/selectfrom/dynamically-pivot-data-in-redshift-6e2e73e9df13"> Dynamically pivot data in Redshift</a></h2>
+                                               <h4> AWS Redshift</h4>
+                                            <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>-->
                                         </div>
-                                        <img class="img-fluid" src="assets/aviva-logo.png" alt="..." />
+                                        <img class="img-fluid" src="assets/medium-logo.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -61,11 +61,11 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Attewell Aerospace</h2>
-                                                <h3> Automated Reporting</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder"><a href="https://medium.com/@alibinshahid/download-tableau-view-data-as-a-csv-pdf-image-using-api-7e9451f01a16">  Download Tableau view as a CSV/PDF/Image using Tableau API </a> </h2>
+                                                <h4> Tableau</h4>
+                                            <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>-->
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/medium-logo.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -75,11 +75,11 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Attewell Aerospace</h2>
-                                                <h3> System Development</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder"><a href="https://medium.com/towardsdev/extract-list-of-workbooks-and-related-datasources-using-tableauapi-b53f1bfc82a4">Extract list of workbooks & related datasources using Tableau API</a></h2>
+                                                <h4> Tableau</h4>
+                                            <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>-->
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/medium-logo.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -89,11 +89,11 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">John Radcliffe Hospital</h2>
-                                                <h3> Data Analysis</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder"><a href="https://medium.com/selectfrom/flattening-arrays-in-aws-redshift-222ae2887a4e">How to unnest arrays in Redshift</a></h2>
+                                                <h4> AWS Redshift</h4>
+                                            <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>-->
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/medium-logo.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -103,11 +103,25 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Attest</h2>
-                                                <h3> Tableau Development</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder"><a href="https://medium.com/selectfrom/conditional-format-chart-in-microsoft-excel-using-vba-a87426ec22a4">Conditional format chart in Excel using VBA</a></h2>
+                                                <h4> MS Excel</h4>
+                                            <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>-->
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/medium-logo.png" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                            <br> </br>
+                            <!-- Project Card 6-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder"><a href="https://medium.com/selectfrom/automatically-add-columns-from-one-table-to-another-aws-redshift-d45472bc6c1">Automatically add columns between tables in Redshift</a></h2>
+                                                <h4> AWS Redshift</h4>
+                                            <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>-->
+                                        </div>
+                                        <img class="img-fluid" src="assets/medium-logo.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
