--- a/resume.html
+++ b/resume.html
@@ -29,6 +29,7 @@
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -64,7 +65,32 @@
                                                 <div class="small text-muted">London, UK</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div><ul>
+                                            <li>Evaluate, enhance, and optimize existing business intelligence infrastructure to meet business
+                                                requirements.
+                                            </li>
+                                            <li>
+                                                Lead the implementation of Airflow (transitioning from RQ Scheduler/flask app) as the primary orchestrator for the team.
+                                            </li>
+                                            <li>
+                                                Collaborate with cross-functional teams to understand their business needs and provided support in data collection and analysis.
+                                            </li>
+                                            <li>
+                                                Collaborated closely with the leadership team to identify business requirements and successfully delivered fully automated KPI reporting using Tableau.
+                                            </li>
+                                            <li>
+                                                Engineered a dedicated infrastructure, including the development of a custom Flask application, to streamline company-wide self-serve analytics.
+                                            </li>
+                                            <li>
+                                                This innovative solution efficiently allocates and rotates Tableau licenses among users, eliminating the dependency on Tableau Admin interventions.
+                                            </li>
+                                            <li>
+                                                Designing and implementing data pipelines and models, ensuring data quality and integrity. (AWS Glue, AWS AppFlow, S3, Redshift, Airflow)
+                                            </li>
+                                            <li>
+                                                Building, maintain and optimising our data warehouse (Redshift) to support reporting and analytics.
+                                            </li>
+                                        </ul></div></div>
                                     </div>
                                 </div>
                             </div>
@@ -80,7 +106,26 @@
                                                 <div class="small text-muted">Oxford, UK</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div><ul>
+                                            <li>
+                                                Work with senior management in understanding current & future business needs. Explore & trial new technologies to deliver efficiency improvements and automated existing tasks.
+                                            </li>
+                                            <li>
+                                                Deployed Tableau (inc. server) to AriensCo for deep data analysis & report automation purposes. Fully automated key management reports.
+                                            </li>
+                                            <li>
+                                                Work with head of departments in understanding their departmental needs and deliver business intelligent solutions using SQL & advance Excel.
+                                            </li>
+                                            <li>
+                                                Developed an in-house low-level MRP system using Excel & MySQL for supply chain.
+                                            </li>
+                                            <li>
+                                                Review existing external software dependencies and build in-house tools.
+                                            </li>
+                                            <li>
+                                                Collaborate with IT manager in identifying, documenting and rectifying data discrepancies.
+                                            </li>
+                                        </ul></div></div>
                                     </div>
                                 </div>
                             </div>
@@ -96,7 +141,23 @@
                                                 <div class="small text-muted">Oxford, UK</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div>L<ul>
+                                            <li>
+                                                Work as data/business intelligence expert in the business. Understand company’s data and help colleagues with analysis.
+                                            </li>
+                                            <li>
+                                                Working directly with director of RapidCareTM in understanding his business segment needs and suggesting improvements across all roles.
+                                            </li>
+                                            <li>
+                                                Personally, took the initiative in documenting all the process across all positions. Laid the foundation for quality management system.
+                                            </li>
+                                            <li>
+                                                Using PowerAutomate linked Wufoo & Excel to eliminate human reliance on data collection. Furthermore, automated KPI distribution using Tableau.
+                                            </li>
+                                            <li>
+                                                Automated weekly build plan process saving £70,000 annually in hard savings.
+                                            </li>
+                                        </ul></div></div>
                                     </div>
                                 </div>
                             </div>
@@ -112,7 +173,13 @@
                                                 <div class="small text-muted">Oxford, UK</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div><ul>
+                                            <li>Maintaining, analysing and communicating the key manufacturing/product quality metrics.
+                                                Identifying areas of improvement, develop and implement improvement strategies.</li>
+                                            <li>
+                                                Working with suppliers to improve supplier performance, developing metrics with the supply chain manager.
+                                            </li>
+                                        </ul></div></div>
                                     </div>
                                 </div>
                             </div>
@@ -128,7 +195,17 @@
                                                 <div class="small text-muted">Royston, UK</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div><ul>
+                                            <li>
+                                                Lead Tableau developer for two sites. Furthermore, responsible for training colleagues on Tableau desktop.
+                                            </li>
+                                            <li>
+                                                Responsible for delivering manufacturing excellence targets for two departments.
+                                            </li>
+                                            <li>
+                                                Team member of side-wide transformation team. Responsible for highlighting and delivering targets with special focus on digital transformation.
+                                            </li>
+                                        </ul></div></div>
                                     </div>
                                 </div>
                             </div>
@@ -144,7 +221,20 @@
                                                 <div class="small text-muted">Witney, UK</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div><ul>
+                                            <li>
+                                                Performed in-depth analysis on daily production data to help identify production bottlenecks.
+                                            </li>
+                                            <li>
+                                                Established, set and maintained process standards and the capacity book, measuring performance to plan.
+                                            </li>
+                                            <li>
+                                                Analysed capacity requirements to achieve output, propose labour and equipment resources to achieve business plans.
+                                            </li>
+                                            <li>
+                                                Chaired weekly yield meetings guiding cross functional team to make improvements and increase yields.
+                                            </li>
+                                        </ul></div></div>
                                     </div>
                                 </div>
                             </div>
@@ -160,7 +250,19 @@
                                                 <div class="small text-muted">Leeds, UK</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div><ul>
+                                            <li>Lead the site-wide digital transformation project. Got selected for the best project of the year.
+                                                Delivered annual savings of £25,000.</li>
+                                            <li>
+                                                Conducted work measurement/method studies against new and existing tasks to establish time estimates, measure operator performance and ensure that the most effective manufacturing and assembly techniques are adopted.
+                                            </li>
+                                            <li>
+                                                Lead and implemented projects that improved the layout of work areas, tool design and source cost effective external services with the overall aim of improving labour productivity.
+                                            </li>
+                                            <li>
+                                                Worked with other teams on site to implement lean manufacturing principles to recognise improvements.
+                                            </li>
+                                        </ul></div></div>
                                     </div>
                                 </div>
                             </div>
@@ -218,6 +320,12 @@
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Redshift</div></div>
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Excel</div></div>
                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Streamlit</div></div>
+                                        </div>
+                                        <br> </br>
+                                        <div class="row row-cols-1 row-cols-md-3">
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">AppFlow</div></div>
+                                            <!--<div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Excel</div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Streamlit</div></div>-->
                                         </div>
                                     </div>
                                     <!-- Languages list-->
