--- a/resume.html
+++ b/resume.html
@@ -141,7 +141,7 @@
                                                 <div class="small text-muted">Oxford, UK</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>L<ul>
+                                        <div class="col-lg-8"><div><ul>
                                             <li>
                                                 Work as data/business intelligence expert in the business. Understand company’s data and help colleagues with analysis.
                                             </li>
