--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                             <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
+                            <li class="nav-item"><a class="nav-link" href="publications.html">Services</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
