--- a/publications.html
+++ b/publications.html
@@ -49,8 +49,8 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder"> <a href="https://medium.com/selectfrom/dynamically-pivot-data-in-redshift-6e2e73e9df13"> Dynamically pivot data in Redshift</a></h2>
-                                               <h4> AWS Redshift</h4>
+                                            <h3 class="fw-bolder"> <a href="https://medium.com/selectfrom/dynamically-pivot-data-in-redshift-6e2e73e9df13"> Dynamically pivot data in Redshift</a></h3>
+                                               <h6> AWS Redshift</h6>
                                             <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>-->
                                         </div>
                                         <img class="img-fluid" src="assets/medium-logo.png" alt="..." />
@@ -62,8 +62,8 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder"><a href="https://medium.com/@alibinshahid/download-tableau-view-data-as-a-csv-pdf-image-using-api-7e9451f01a16">  Download Tableau view as a CSV/PDF/Image using Tableau API </a> </h2>
-                                                <h4> Tableau</h4>
+                                            <h3 class="fw-bolder"><a href="https://medium.com/@alibinshahid/download-tableau-view-data-as-a-csv-pdf-image-using-api-7e9451f01a16">  Download Tableau view as a CSV/PDF/Image using Tableau API </a> </h3>
+                                                <h6> Tableau</h6>
                                             <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>-->
                                         </div>
                                         <img class="img-fluid" src="assets/medium-logo.png" alt="..." />
@@ -76,8 +76,8 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder"><a href="https://medium.com/towardsdev/extract-list-of-workbooks-and-related-datasources-using-tableauapi-b53f1bfc82a4">Extract list of workbooks & related datasources using Tableau API</a></h2>
-                                                <h4> Tableau</h4>
+                                            <h3 class="fw-bolder"><a href="https://medium.com/towardsdev/extract-list-of-workbooks-and-related-datasources-using-tableauapi-b53f1bfc82a4">Extract list of workbooks & related datasources using Tableau API</a></h3>
+                                                <h6> Tableau</h6>
                                             <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>-->
                                         </div>
                                         <img class="img-fluid" src="assets/medium-logo.png" alt="..." />
@@ -90,8 +90,8 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder"><a href="https://medium.com/selectfrom/flattening-arrays-in-aws-redshift-222ae2887a4e">How to unnest arrays in Redshift</a></h2>
-                                                <h4> AWS Redshift</h4>
+                                            <h3 class="fw-bolder"><a href="https://medium.com/selectfrom/flattening-arrays-in-aws-redshift-222ae2887a4e">How to unnest arrays in Redshift</a></h3>
+                                                <h6> AWS Redshift</h6>
                                             <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>-->
                                         </div>
                                         <img class="img-fluid" src="assets/medium-logo.png" alt="..." />
@@ -104,8 +104,8 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder"><a href="https://medium.com/selectfrom/conditional-format-chart-in-microsoft-excel-using-vba-a87426ec22a4">Conditional format chart in Excel using VBA</a></h2>
-                                                <h4> MS Excel</h4>
+                                            <h3 class="fw-bolder"><a href="https://medium.com/selectfrom/conditional-format-chart-in-microsoft-excel-using-vba-a87426ec22a4">Conditional format chart in Excel using VBA</a></h3>
+                                                <h6> MS Excel</h6>
                                             <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>-->
                                         </div>
                                         <img class="img-fluid" src="assets/medium-logo.png" alt="..." />
@@ -118,8 +118,8 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder"><a href="https://medium.com/selectfrom/automatically-add-columns-from-one-table-to-another-aws-redshift-d45472bc6c1">Automatically add columns between tables in Redshift</a></h2>
-                                                <h4> AWS Redshift</h4>
+                                            <h3 class="fw-bolder"><a href="https://medium.com/selectfrom/automatically-add-columns-from-one-table-to-another-aws-redshift-d45472bc6c1">Automatically add columns between tables in Redshift</a></h3>
+                                                <h6> AWS Redshift</h6>
                                             <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>-->
                                         </div>
                                         <img class="img-fluid" src="assets/medium-logo.png" alt="..." />
@@ -144,7 +144,7 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div>
+                    <div class="col-auto"><div class="small m-0">Copyright &copy; AI2 Solutions Ltd</div></div>
                     <div class="col-auto">
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
