--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                                <p class="lead fw-light mb-4">My name is Ali and I can help your business get more data smart.</p>
+                                <p class="lead fw-light mb-4">My name is Ali and I can enhance your business's data strategy by leveraging smart solutions to drive growth.</p>
                                 <p class="text-muted">As a data engineering and business intelligence specialist, I provide comprehensive solutions to help your business make informed, data-driven decisions. I collect, process, and analyze data to deliver actionable insights that empower you to optimize your operations, increase efficiency, and maximize profitability. By leveraging the latest data technologies, I create customized strategies that align with your business goals, providing you with the tools and knowledge to stay ahead of the competition. Let me help you unlock the full potential of your data and achieve measurable success.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
