--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                             <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
                             <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html"><font color="purple">Book a meeting</font> </a></li>
                         </ul>
                     </div>
                 </div>
